# pics-drugsheet-generator

./: .dockerignore  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  run.bat  run.sh
.claude/: settings.local.json
.claude/skills/gemini-verify/: SKILL.md
.claude/skills/generate-drugsheet/: SKILL.md
.claude/skills/tidy-kb/: SKILL.md
Knowledge base/: FormRoute.xlsx  ICD10_usage.xlsx  TFQavSummary.xlsx  drugsToClasses.xls
Knowledge base/cleaned/: drugs_to_classes.xlsx  form_route.xlsx  icd10_usage.xlsx  tfqav_summary.xlsx
bnf-mcp/: api.py  app.py  dmd_server.py  emc_server.py  formulary_server.py  generate.py  pyproject.toml  requirements.txt  server.py  start.sh  stop.sh  tidy_kb.py
bnf-mcp/static/: app.js  index.html  style.css
prompts/: claude_code_prompt.md  gemini_cli_prompt.md
