[project]
name = "bnf-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastmcp>=3.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.0,<3",
    "pdfplumber>=0.11.9",
    "python-docx>=1.2.0",
    "requests>=2.32.5",
    "streamlit>=1.40",
    "xlrd>=2.0.2",
]
