[project]
name = "bnf-mcp"
version = "0.1.0"
description = "PICS Drug Sheet Generator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.27.0",
    "openpyxl>=3.1.5",
    "pandas>=2.0,<3",
    "pdfplumber>=0.11.9",
    "streamlit>=1.40",
    "xlrd>=2.0.2",
]

[project.optional-dependencies]
dev = [
    "fastmcp>=3.0.0",
    "python-docx>=1.2.0",
    "requests>=2.32.5",
]
api = [
    "fastapi>=0.115.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30.0",
]
